--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev" : "nodemon ./src/server.js",
+    "dev": "nodemon ./src/server.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
-    },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +18,9 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "nodemon": "^2.0.15"
   }
 }
